# ehr_preprocess

./: .gitignore  Computerome.md  LICENSE  README.md  environment.yaml  pyproject.toml  requirements.txt  setup.py
azure_run/: __init__.py
base/: event.py  info.py  patient.py  preprocessor.py
configs/: azure.yaml  computerome.yaml  config.yaml  covid.yaml  covid_seperated.yaml  mimic3.yaml  mimic4.yaml  synthea.yaml  synthea_meds.yaml
data/: README.md
data/formatted/mimic-iii-clinical-database-1.4/: README.md  metadata.json
data/helper/: README.md  sks_diag.txt
data/interim/mimic4/: ndc_map 2023_07_29 13_14 (test2).csv
data/interim/mimic_iii_ml_for_health/: README.md
data/processed/: README.md
data/processed/mimic-iii-clinical-database-1.4/: README.md  metadata.json
data/raw/: mimic3.pptx
ehr_preprocess/: main.py  run_remote.py  test_admission.ipynb
ehr_preprocess/ehr_preprocess/: __init__.py
ehr_preprocess/extractors/: extractors.py  utils.py
ehr_preprocess/helpers/: Readme.md
ehr_preprocess/preprocessors/: __init__.py  azure.py  base.py  computerome.py  filter.py  helper.py  hipaa_mapper.py  load.py  loader.py  meds_transforms.py  mimic.py  mimic4.py  mimic_helper.py  preprocessors.py  statistics.py  synthea.py  synthea_meds.py  utils.py
ehr_preprocess/processors/: base.py  computerome.py  mimic.py  utils.py
ehr_preprocess/tests/: __init__.py  meds_transforms.py
example_data/csv_synthea500/: conditions.csv  patients.csv
example_data/parquet_synthea500/: conditions.parquet  medications.parquet  patients.parquet
notebooks/: mimic4_stats.ipynb  mimic4_test.ipynb  synthea_test.ipynb
notebooks/explore/: azure.ipynb  mimic3.ipynb
utils/: utils.py
